--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="assinatura">
     My Vibe Mood<br>
-    @my_vibemood
+    Nos siga no Instagram: @my_vibemood
   </div>
 </body>
 </html>
