--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
     <p>Ser espiritual não é sair do mundo. É estar inteiro nele.</p>
   </div>
 
-  <!-- Substituir pelo link final do áudio -->
-  <!-- <audio controls>
-    <source src="audio.mp3" type="audio/mpeg">
-    Seu navegador não suporta áudio.
-  </audio> -->
+<audio controls>
+  <source src="ttsmaker-file-2025-6-18-14-49-47.mp3" type="audio/mpeg">
+  Seu navegador não suporta áudio.
+</audio>
 
   <div class="assinatura">
     My Vibe Mood<br>
