--- a/index.html
+++ b/index.html
@@ -9,52 +9,50 @@
       font-family: sans-serif;
       background: #f4f4f4;
       padding: 2rem;
-      line-height: 1.6;
-      color: #222;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    h1 {
-      font-size: 1.5rem;
       text-align: center;
-      margin-bottom: 2rem;
+      color: #222;
+    }
+    .logo {
+      max-width: 180px;
+      margin: 0 auto 2rem;
+      display: block;
+    }
+    .intro {
+      font-size: 1.2rem;
+      margin-bottom: 1.5rem;
+      color: #444;
     }
     audio {
       width: 100%;
-      margin: 2rem 0;
+      max-width: 500px;
+      margin: 2rem auto;
+      display: block;
     }
-    .reflexao {
-      font-size: 1.1rem;
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    .assinatura {
-      text-align: center;
-      margin-top: 3rem;
-      font-size: 0.9rem;
+    .cta {
+      font-size: 0.95rem;
       color: #555;
+      margin-top: 3rem;
+    }
+    .cta a {
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Espiritualidade no Mundo Real</h1>
+  <img src="logo alta.png" alt="My Vibe Mood Logo" class="logo">
 
-  <div class="reflexao">
-    <p>Sim, a espiritualidade não paga contas. Mas ela te lembra quem está pagando. Não é o ego. Não é o medo. É a consciência, agindo no mundo.</p>
-    <p>Respira. O boleto continua lá. Mas talvez hoje você pague com mais calma.</p>
-    <p>Ser espiritual não é sair do mundo. É estar inteiro nele.</p>
-  </div>
+  <p class="intro">Ouça com o coração.</p>
 
-<audio controls>
-  <source src="ttsmaker-file-2025-6-18-14-49-47.mp3" type="audio/mpeg">
-  Seu navegador não suporta áudio.
-</audio>
+  <audio controls>
+    <source src="ttsmaker-file-2025-6-18-14-49-47.mp3" type="audio/mpeg">
+    Seu navegador não suporta o áudio.
+  </audio>
 
-  <div class="assinatura">
-    My Vibe Mood<br>
-    Nos siga no Instagram: @my_vibemood
+  <div class="cta">
+    Nos siga no Instagram<br>
+    <a href="https://instagram.com/myvibemood" target="_blank">@myvibemood</a>
   </div>
 </body>
 </html>
