--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="cta">
     Nos siga no Instagram<br>
-    <a href="https://instagram.com/myvibemood" target="_blank">@myvibemood</a>
+    <a href="https://instagram.com/my_vibemood" target="_blank">@my_vibemood</a>
   </div>
 </body>
 </html>
